nnn v1.9
2018-08-10

What's in?
- Support unlimited number of scripts
- Pass currently selected filename as first argument to custom scripts
- Support directory auto-select in _navigate-as-you-type_ mode
- Show selection name in archive name prompt
- Support Cygwin opener
- Better support on RHEL 25 with earlier version on curses
- Sample script for `fzy` integration
- Now available on OpenBSD

-------------------------------------------------------------------------------

nnn v1.8
2018-05-02

What's in?
- Run a custom script
- Archive selected file/directory
- Show number of cherry-picked files in multi-copy mode
- Env var `NNN_SHOW_HIDDEN` to show hidden files by default
- Additional information in help screen
- Give preference to env var VISUAL, if defined, over EDITOR
- New/changed/remapped shortcuts
  - <kbd>^]</kbd> - spawn a new shell in current directory
  - <kbd>r</kbd> - edit directory entries in vidir
  - <kbd>R</kbd> - run a custom script
  - <kbd>^I</kbd> - toggle navigate-as-you-type mode
  - <kbd>L</kbd> - lock the current terminal (Linux-only)
- All Ctrl shortcuts enabled in navigate-as-you-type mode
- Fix: GUI programs closing when parent terminal is closed
- Recognize `~`, `-` and `&` at bookmark prompt
- Recognize ruby (.rb) files as text files
- Efficient integer-only file size calculation
- Official inclusion on openSUSE and Fedora
- Package generation for Ubuntu 18.04

-------------------------------------------------------------------------------

nnn v1.7
2018-02-28

What's in?
- Batch rename/move/delete files in vidir from [moreutils](https://joeyh.name/code/moreutils/)
- Copy multiple file paths
- Copy file paths when X is unavailable
- Optionally quote individual file paths with single quotes on copy
- Use ISO 8601 date format in file details
- New/changed/remapped shortcuts:
  - <kbd>^B</kbd> - show bookmark prompt (replaces <kbd>b</kbd>)
  - <kbd>b</kbd> - pin current dir (replaces <kbd>^B</kbd>)
  - <kbd>^J</kbd> - toggle du mode